--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ankix"
-version = "0.1.3"
+version = "0.1.4"
 description = "New file format for Anki with improved review intervals and Peewee SQLite powered"
 authors = ["Pacharapol Withayasakpunt <patarapolw@gmail.com>"]
 license = "MIT"
@@ -15,6 +15,7 @@ peewee = "^3.7"
 tqdm = "^4.27"
 mistune = "^0.8.4"
 datauri = {git = "https://github.com/patarapolw/python-data-uri.git"}
+pytimeparse = "^1.1"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0"
