--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ tqdm = "^4.27"
 mistune = "^0.8.4"
 datauri = {git = "https://github.com/patarapolw/python-data-uri.git"}
 pytimeparse = "^1.1"
+python-magic = "^0.4.15"
 
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0"
